# tricount-exporter

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  config.apps-script.example.json  config.schema.json  config.toml.example  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps-script/: .claspignore  Automation.gs  Config.gs  DriveExport.gs  GmailIntake.gs  ImportLog.gs  Installer.gs  Notifications.gs  TricountApi.gs  appsscript.json
docs/: README.md  allocation-data-research.md  api-research.md  apps-script-configuration.md  apps-script-deployment.md  apps-script-installation.md  apps-script-operations.md  google-apps-script-feasibility.md  sesterce-import-research.md
scripts/: install-google-apps-script.sh  install.sh  tricount-exporter.sh  validate-apps-script.js
src/tricount_exporter/: __init__.py  __main__.py  cli.py
tests/: apps_script_contract_test.js  apps_script_gmail_intake_test.js  apps_script_installer_test.sh  conftest.py  test_cli.py
