[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tricount-exporter"
version = "0.2.0"
description = "Export Tricount transactions and attachments into title-based folders."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openpyxl==3.1.5",
  "requests==2.32.3",
  "rsa==4.9",
  "tqdm==4.67.1",
]

[project.optional-dependencies]
dev = [
  "mypy==1.18.2",
  "pytest==8.3.5",
  "ruff==0.11.5",
  "types-requests==2.32.4.20250913",
]

[project.scripts]
tricount-exporter = "tricount_exporter.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = [
  "openpyxl",
  "openpyxl.*",
  "rsa",
  "tqdm",
  "tqdm.*",
]
ignore_missing_imports = true
